# SDRPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  build_and_pack_mac.sh  make_windows_package.ps1  readme.md
core/: CMakeLists.txt
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: config.cpp  core.cpp
core/src/dsp/multirate/: rational_resampler.h
core/src/gui/: gui.cpp  gui.h  layout.cpp  layout.h  layout_builder.h  main_window.cpp  main_window.h
core/src/gui/menus/: bandplan.cpp  display.cpp  source.cpp  vfo_color.cpp
core/src/gui/widgets/: dock.cpp  dock.h  folder_select.cpp  frequency_select.cpp  waterfall.cpp  waterfall.h
core/src/imgui/: imgui.h
core/src/utils/: flog.cpp  flog.h
decoder_modules/atv_decoder/: CMakeLists.txt
decoder_modules/falcon9_decoder/src/: falcon_fec.h
decoder_modules/meteor_demodulator/: CMakeLists.txt
decoder_modules/pager_decoder/: CMakeLists.txt
decoder_modules/radio/: CMakeLists.txt
decoder_modules/ryfi_decoder/: CMakeLists.txt
misc_modules/frequency_manager/: CMakeLists.txt
misc_modules/frequency_manager/src/: main.cpp
misc_modules/iq_exporter/: CMakeLists.txt
misc_modules/recorder/: CMakeLists.txt
misc_modules/rigctl_client/: CMakeLists.txt
misc_modules/rigctl_server/: CMakeLists.txt
misc_modules/scanner/: CMakeLists.txt
misc_modules/scheduler/: CMakeLists.txt
root/res/layouts/: default.json  readme.md
root/res/themes/: classic_imgui.json  dark_imgui.json  light_imgui.json
sdk/: .gitignore  make_sdr.bat
sink_modules/audio_sink/: CMakeLists.txt
sink_modules/network_sink/: CMakeLists.txt
source_modules/airspy_source/: CMakeLists.txt
source_modules/airspy_source/src/: main.cpp
source_modules/airspyhf_source/: CMakeLists.txt
source_modules/airspyhf_source/src/: main.cpp
source_modules/audio_source/: CMakeLists.txt
source_modules/audio_source/src/: main.cpp
source_modules/badgesdr_source/: CMakeLists.txt
source_modules/badgesdr_source/src/: main.cpp
source_modules/bladerf_source/src/: main.cpp
source_modules/file_source/: CMakeLists.txt
source_modules/file_source/src/: main.cpp
source_modules/fobossdr_source/src/: main.cpp
source_modules/hackrf_source/: CMakeLists.txt
source_modules/hackrf_source/src/: main.cpp
source_modules/harogic_source/src/: main.cpp
source_modules/hermes_source/: CMakeLists.txt
source_modules/hermes_source/src/: main.cpp
source_modules/limesdr_source/src/: main.cpp
source_modules/network_source/: CMakeLists.txt
source_modules/network_source/src/: main.cpp
source_modules/perseus_source/src/: main.cpp
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/plutosdr_source/src/: main.cpp
source_modules/rfnm_source/: CMakeLists.txt
source_modules/rfnm_source/src/: main.cpp
source_modules/rfspace_source/: CMakeLists.txt
source_modules/rtl_sdr_source/: CMakeLists.txt
source_modules/rtl_sdr_source/src/: main.cpp
source_modules/rtl_tcp_source/: CMakeLists.txt
source_modules/rtl_tcp_source/src/: main.cpp
source_modules/sdrplay_source/src/: main.cpp
source_modules/sdrpp_server_source/: CMakeLists.txt
source_modules/soapy_source/: CMakeLists.txt
source_modules/soapy_source/src/: main.cpp
source_modules/spectran_http_source/: CMakeLists.txt
source_modules/spectran_source/src/: main.cpp
source_modules/spyserver_source/: CMakeLists.txt
source_modules/spyserver_source/src/: spyserver_client.cpp
source_modules/usrp_source/: CMakeLists.txt
source_modules/usrp_source/src/: main.cpp
